projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/datetime_date_rejects_str_year_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "datetime_date_rejects_str_year_argument"
# subject = "datetime.date"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""datetime.date: datetime_date_rejects_str_year_argument (errors)."""
import datetime

try:
    result = datetime.date("2024", 1, 1)
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
